tests/baselines/reference/classSideInheritance3.errors.txt
tests/cases/compiler/classSideInheritance3.ts(16,5): error TS2322: Type 'typeof B' is not assignable to type 'typeof A'.
  Signature 'new (x: string): A' has no corresponding signature in 'typeof B'
tests/cases/compiler/classSideInheritance3.ts(17,5): error TS2322: Type 'typeof B' is not assignable to type 'new (x: string) => A'.
  Signature 'new (x: string): A' has no corresponding signature in 'typeof B'


==== tests/cases/compiler/classSideInheritance3.ts (2 errors) ====
    class A {
        constructor(public x: string) {
        }
    }
    class B extends A {
        constructor(x: string, public data: string) {
            super(x);
        }
    }
    class C extends A {
        constructor(x: string) {
            super(x);
        }
    }
    
    var r1: typeof A = B; // error
        ~~
!!! error TS2322: Type 'typeof B' is not assignable to type 'typeof A'.
!!! error TS2322:   Signature 'new (x: string): A' has no corresponding signature in 'typeof B'
    var r2: new (x: string) => A = B; // error
        ~~
!!! error TS2322: Type 'typeof B' is not assignable to type 'new (x: string) => A'.
!!! error TS2322:   Signature 'new (x: string): A' has no corresponding signature in 'typeof B'
    var r3: typeof A = C; // ok